email send function added.

--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block tutor_home %}
+{% block home %}
 <div>
     <h3>Tutor Home</h3>
 </div>
-{% endblock tutor_home %}
+{% endblock home %}
