--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -45,6 +45,7 @@
 		{% block forgotpassword %}{% endblock forgotpassword %}
 		{% block signuppage %}{% endblock signuppage %}
 		{% block home %}{% endblock home %}
+		{% block sendmail %}{% endblock sendmail %}
 		{% include "./Footer/Footer.html" %}
 	
 
