--- a/my_bootcamp/templates/SendMail/SendMail.html
+++ b/my_bootcamp/templates/SendMail/SendMail.html
@@ -20,7 +20,7 @@
             or <span class='font-bold text-violet-500 underline'><a href="">Forgot Password</a></span>
         </p><br>
         <p class='divide-y-2 divide-slate-300'>
-            Dont have an account? <span class='font-bold text-violet-500 underline'><a href="{% url "signup" %}">Sign Up</a></span>
+            Dont have an account? <span class='font-bold text-violet-500 underline'><a href="{% url "signup-page" %}">Sign Up</a></span>
         </p><br>
     </form>
 </div>
