--- a/my_bootcamp/templates/SignUp/SignUp.html
+++ b/my_bootcamp/templates/SignUp/SignUp.html
@@ -15,7 +15,7 @@
             <span class='font-bold text-violet-500 underline'><a>Privacy Policy</a></span>
         </p><br>
         <p class='divide-y-2 divide-slate-300'>
-            Already have an account? <span class='font-bold text-violet-500 underline'><a href="{% url "login" %}">Log in</a></span>
+            Already have an account? <span class='font-bold text-violet-500 underline'><a href="{% url "login-page" %}">Log in</a></span>
         </p><br>
     </form>
 </div>
