password change function added.

--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -43,6 +43,7 @@
 		{% block loginpage %}{% endblock loginpage %}
 		{% block logout %}{% endblock logout %}
 		{% block forgotpassword %}{% endblock forgotpassword %}
+		{% block password_change %}{% endblock password_change %}
 		{% block signuppage %}{% endblock signuppage %}
 		{% block home %}{% endblock home %}
 		{% block sendmail %}{% endblock sendmail %}
