--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -45,6 +45,11 @@
 		{% block forgotpassword %}{% endblock forgotpassword %}
 		{% block password_change %}{% endblock password_change %}
 		{% block signuppage %}{% endblock signuppage %}
+		{% block password_reset %}{% endblock password_reset %}
+		{% block password_reset_done %}{% endblock password_reset_done %}
+		{% block password_change_done %}{% endblock password_change_done %}
+		{% block password_reset_confirm %}{% endblock password_reset_confirm %}
+		{% block password_reset_complete %}{% endblock password_reset_complete %}
 		{% block home %}{% endblock home %}
 		{% block sendmail %}{% endblock sendmail %}
 		{% include "./Footer/Footer.html" %}
