--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -48,7 +48,7 @@
                 <a href="{% url "logout-page" %}">
                 <button class=' font-serif rounded-md 
                 items-center   h-12 px-8
-                text-white hover:text-black hover:bg-slate-300 bg-white  border border-violet-700 shadow-lg '>
+                text-white hover:text-black bg-white   border border-violet-700 shadow-lg '>
                 <span class='bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>Logout</span>
                 </button>
                 </a>
@@ -58,7 +58,7 @@
                 <a href="{% url "login-page" %}">
                 <button class=' font-serif rounded-md 
                 items-center   h-12 px-8
-                text-white hover:text-black hover:bg-slate-300 bg-white  border border-violet-700 shadow-lg '>
+                text-white hover:text-black  bg-white border border-violet-700 shadow-lg '>
                 <span class='bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>Login</span>
                 </button>
                 </a>
