--- a/my_bootcamp/templates/PasswordResetDone/PasswordResetDone.html
+++ b/my_bootcamp/templates/PasswordResetDone/PasswordResetDone.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block  password_reset_done %}
+<div class='items-left justify-left font-bold font-sans my-20 mx-12 text-slate-200'>
   <p>
     We've emailed you instructions for setting your password, if an account exists with the email you entered.
     You should receive them shortly.
@@ -9,4 +10,8 @@
     If you don't receive an email, please make sure you've entered the address you registered with,
     and check your spam folder.
   </p>
+  <p>
+    <button></button>
+  </p>
+</div>
 {% endblock password_reset_done %}
