--- a/my_bootcamp/templates/PasswordChange/PasswordChange.html
+++ b/my_bootcamp/templates/PasswordChange/PasswordChange.html
@@ -16,9 +16,16 @@
             <li>Your password can’t be entirely numeric.</li></ul>
         </div>
             
-        <input class="w-full mb-4 text-slate-800" type="password" name="new_password2"  required placeholder='Repeat Password' >           
+        <input class="w-full mb-4 text-slate-800" type="password" name="new_password2"  required placeholder='Repeat Password' >   
         <p class=''>
-            <input class='text-center bg-blue-500 w-full p-2' type='submit' value='Password Change'></input>
+            
+            {% for i  in messages %}
+                {{i.error}}
+            {% endfor %}
+                
+        </p><br>        
+        <p class=''>
+            <input class='text-center bg-blue-500 w-full p-2' type='submit' value='Change Password '></input>
         </p><br>
         <p class='border-b-2 border-slate-300'>
             or <span class='font-bold text-violet-500 underline'><a href="{% url "password_reset" %}">Forgot Password</a></span>
