auth form error msg added.

--- a/my_bootcamp/templates/PasswordChange/PasswordChange.html
+++ b/my_bootcamp/templates/PasswordChange/PasswordChange.html
@@ -19,10 +19,15 @@
         <input class="w-full mb-4 text-slate-800" type="password" name="new_password2"  required placeholder='Repeat Password' >   
         <p class=''>
             
-            {% for i  in messages %}
-                {{i.error}}
-            {% endfor %}
-                
+            {% for field in form %}
+            {% if field.errors %}
+                <p class='text-red-500 p-2 text-left'>
+                    {% for error in field.errors %}
+                        {{ error }}
+                    {% endfor %}
+                </p>
+            {% endif %}
+        {% endfor %}
         </p><br>        
         <p class=''>
             <input class='text-center bg-blue-500 w-full p-2' type='submit' value='Change Password '></input>
