--- a/my_bootcamp/templates/PasswordReset/PasswordReset.html
+++ b/my_bootcamp/templates/PasswordReset/PasswordReset.html
@@ -5,6 +5,19 @@
         {% csrf_token %}
         <input class='w-full mb-4' type="email" name="email" autocomplete="email" maxlength="254" required id="id_email" placeholder='Your Registered Email'>
         <p class=''>
+            
+            {% for field in form %}
+            {% if field.errors %}
+                <p class='text-red-500 p-2 text-left'>
+                    {% for error in field.errors %}
+                        {{ error }}
+                    {% endfor %}
+                </p>
+            {% endif %}
+        {% endfor %}
+        </p><br>        
+        <p class=''>
+        <p class=''>
             <input class='text-center bg-blue-500 w-full p-2' type='submit' value='Password Reset Mail'></input>
         </p><br>
         {% comment %} <p class='border-b-2 border-slate-300'>
