--- a/my_bootcamp/templates/PasswordResetConfirm/PasswordResetConfirm.html
+++ b/my_bootcamp/templates/PasswordResetConfirm/PasswordResetConfirm.html
@@ -6,6 +6,19 @@
         <input class='w-full mb-4 text-slate-800' type="password" name="new_password1"  maxlength="254" required id="id_email" placeholder='Your New Password'>
         <input class='w-full mb-4 text-slate-800' type="password" name="new_password2"  maxlength="254" required id="id_email" placeholder='Re-Enter Password'>
         <p class=''>
+            
+            {% for field in form %}
+            {% if field.errors %}
+                <p class='text-red-500 p-2 text-left'>
+                    {% for error in field.errors %}
+                        {{ error }}
+                    {% endfor %}
+                </p>
+            {% endif %}
+        {% endfor %}
+        </p><br>        
+        <p class=''>
+        <p class=''>
             <input class='text-center bg-blue-500 w-full p-2' type='submit' value='Password Reset'></input>
         </p><br>
         {% comment %} <p class='border-b-2 border-slate-300'>
