--- a/my_bootcamp/templates/ForgotPassword/ForgotPassword.html
+++ b/my_bootcamp/templates/ForgotPassword/ForgotPassword.html
@@ -7,8 +7,22 @@
         <input class='w-full text-slate-800' type='email'></input>
     </p><br>
     <p class=''>
+            
+        {% for field in form %}
+        {% if field.errors %}
+            <p class='text-red-500 p-2 text-left'>
+                {% for error in field.errors %}
+                    {{ error }}
+                {% endfor %}
+            </p>
+        {% endif %}
+    {% endfor %}
+    </p><br>        
+    <p class=''>
+    <p class=''>
         <input class='text-center bg-blue-500 w-full p-2' type='submit' value='Reset Password'></input>
     </p><br>
+
     <p class=''>
         or <span class='font-bold text-violet-500 underline'><a href="{% url "login" %}">Login</a></span>
     </p><br>
