tutor app created.

--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -52,6 +52,7 @@
 		{% block password_reset_complete %}{% endblock password_reset_complete %}
 		{% block home %}{% endblock home %}
 		{% block sendmail %}{% endblock sendmail %}
+		{% block tutor_home %}{% endblock tutor_home %}
 		{% include "./Footer/Footer.html" %}
 	
 
