--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -12,7 +12,7 @@
             Categories
             </a>
         </div> 
-        <div  class=' mx-2 hidden lg:flex xl:flex 2xl:flex  items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
+        <div  class=' mx-2 hidden xl:flex 2xl:flex items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
            <form action='/' method='POST' class='flex '>
             {% csrf_token %}
             <input class='flex-1 rounded-l-lg w-96 text-slate-800' placeholder='Search Here' type='text'></input>
@@ -25,7 +25,7 @@
            </form>
         </div> 
         <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
-            <a href="">
+            <a href="{% url "tutor-home" %}">
             Start Tutoring
             </a>
         </div> 
@@ -35,7 +35,7 @@
             items-center p-2  text-blue-200 hover:text-blue-700"  ></i>
             </a>
         </div>  
-        <div  class=' mx-2 sm:flex  md:hidden lg:hidden xl:hidden 2xl:hidden'>
+        <div  class=' mx-2 sm:flex  md:flex lg:hidden xl:hidden 2xl:hidden'>
             <a>
             <i class="fa-solid fa-bars w-8 h-8 font-serif 
             items-center p-2  text-blue-200 hover:text-blue-700"  ></i>
