--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -53,6 +53,7 @@
 		{% block home %}{% endblock home %}
 		{% block sendmail %}{% endblock sendmail %}
 		{% block tutor_home %}{% endblock tutor_home %}
+		{% block tutor_join_form %}{% endblock tutor_join_form %}
 		{% include "./Footer/Footer.html" %}
 	
 
