--- a/my_bootcamp/templates/Tutor/TutorHome.html
+++ b/my_bootcamp/templates/Tutor/TutorHome.html
@@ -6,7 +6,9 @@
             <h2 class='text-7xl font-mono font-extrabold'>Come teach with us</h2>
             <p>Become an instructor and change lives — including your own</p>
             <p>
+                <a href='{% url "tutor-join" %}'>
                 <button class='bg-blue-700 rounded-sm border border-blue-200 p-2  w-72 my-4'>Get Started</button>
+                </a>
             </p>
         </div>
     </div>
@@ -42,7 +44,9 @@
                 </div>
             </div>
             <p>
+                <a href='{% url "tutor-join" %}'>
                 <button class='bg-blue-700 rounded-sm border border-blue-200 p-0 w-72 my-2'>Get Started</button>
+                </a>    
             </p>
         </div>
     </div>    
@@ -52,7 +56,9 @@
         <h2 class='text-7xl font-mono font-extrabold'>Come teach with us</h2>
         <p>Become an instructor and change lives — including your own</p>
         <p>
+            <a href='{% url "tutor-join" %}'>
             <button class='bg-blue-700 rounded-sm border border-blue-200 p-2  w-72 my-4'>Get Started</button>
+            </a>    
         </p>
     </div>
 
@@ -66,7 +72,9 @@
     <h2 class='text-3xl font-mono font-bold'>Become an instructor today</h2>
     <p>Join one of the best online learning marketplaces.</p>
     <p>
+        <a href='{% url "tutor-join" %}'>
         <button class='bg-blue-700 rounded-sm border border-blue-200 p-2  w-72 my-4'>Get Started</button>
+        </a>    
     </p>
     </div>
 </div>
