--- a/my_bootcamp/templates/TutorJoinForm/TutorJoinForm.html
+++ b/my_bootcamp/templates/TutorJoinForm/TutorJoinForm.html
@@ -1,23 +1,40 @@
 {% extends "base.html" %}
 {% block tutor_join_form %}
-<div class='flex items-center justify-center text-center text-slate-200'>
-    <form class='py-12  sm:mx-4 md:mx-12 lg:mx-20 xl:mx-32 2xl:mx-96 px-12 w-full bg-slate-800 my-32' action='' method='POST'>
+<div class='flex items-left justify-left text-left text-slate-200 h-full'>
+    <form class='flex-1 py-12  sm:mx-4 md:mx-12 lg:mx-20 xl:mx-32 2xl:mx-96 px-12 w-full h-full bg-slate-800 mt-32' action='' method='POST'>
         {% csrf_token %}
         
-        <p class='text-left font-bold'>Fill up form and start teaching</p><br>
-        {{form.as_p}}<br>
-        <p class='items-end justify-end h-12'>
-            <input class='text-center w-full  p-2' type='text'></input>
-        </p><br>
-     
-        <div class='grid grid-cols-3 h-12 mb-12'>
+        <p class='text-center text-2xl font-bold'>Fill up form and start teaching</p><br>
+        <br>
+        <div class='h-full w-full'>
+        {% for field in form  %}
+            <p>{{field.label}}</p><br>
+            <p>{{field}}</p><br>
+            <p>{{field.error}}</p><br>
+        {% endfor %}
+        {% comment %} <label class='text-left items-start' for="title">Title:</label><br>
+        <input class='w-full text-slate-800 rounded-md  p-2 ' type='text' name='title' placeholder='Title'></input>
+        
+        <label class='text-left items-start' for="instructor">Instructor:</label><br>
+        <select class='w-full text-slate-800 rounded-md  p-2 ' type='text' name='instructor' value={{''}} placeholder='Instructor'></select>
+        
+        <label class='text-left items-start' for="category">Category:</label><br>
+        <select class='w-2/3 text-slate-800 rounded-md  p-2 '  name='category' placeholder='Category'></select><br>
+        
+        <label class='text-left items-start' for="price">Price:</label><br>
+        <input class='w-2/3 text-slate-800 rounded-md  p-2 ' type='number' name='price' placeholder='Price'></input>
+        
+        <label class='text-left items-start' for="description">Description:</label><br>
+        <input class='w-full  text-slate-800 rounded-md  p-2 ' type='textarea' name='description' placeholder='Description'></input> {% endcomment %}
+        </div>
+        <div class='grid grid-cols-3 h-12 my-12'>
                 <div  class='col-span-1'></div>
                 <div class='col-span-1'></div>
                 <div class='col-span-1'>
                     <input class='text-center  bg-blue-500 w-full rounded-md border border-blue-200 p-2 ' type='submit' value='Submit'></input>
-                </div>
-            
+                </div>   
         </div>
+        <div class='items-center text-center'>
         <p class='border-b-2 border-violet-700'>
             By signing up, you agree to our  <span class='font-bold text-violet-500 underline'><a>Terms of Use </a></span>and
             <span class='font-bold text-violet-500 underline'><a>Privacy Policy</a></span>
@@ -25,6 +42,7 @@
         <p class='divide-y-2 divide-slate-300'>
             Already have an account? <span class='font-bold text-violet-500 underline'><a href="{% url "login-page" %}">Log in</a></span>
         </p><br>
+        </div>
     </form>
 </div>
 {% endblock tutor_join_form %}
