file uploaded successfully.

--- a/my_bootcamp/templates/Tutor/TutorHome.html
+++ b/my_bootcamp/templates/Tutor/TutorHome.html
@@ -27,25 +27,25 @@
                     <div class=''>
                     <h3 class='font-bold text-lime-600'>Teach your way</h3>
                     </div>
-                    <p class="text-xs font-light">Publish the course you want, in the way you want, and always have control of your own content.</p>
+                    <p class="text-xs font-light ">Publish the course you want, in the way you want, and always have control of your own content.</p>
                 </div>
                 <div class='flex-1 md:mx-4 mt-2'>
                     <div class=''>
                     <h3 class='font-bold text-lime-600'>Inspire learners</h3>
                     </div>
-                    <p class="text-xs font-light">Inspire learners
+                    <p class="text-xs font-light ">Inspire learners
                         Teach what you know and help learners explore their interests, gain new skills, and advance their careers</p>
                 </div>
                 <div class='flex-1 md:mx-4 mt-2'>
                     <div class=''>
                     <h3 class='font-bold text-lime-600 '>Get rewarded</h3>
                     </div>
-                    <p class="text-xs font-light">Expand your professional network, build your expertise, and earn money on each paid enrollment.</p>
+                    <p class="text-xs font-light ">Expand your professional network, build your expertise, and earn money on each paid enrollment.</p>
                 </div>
             </div>
             <p>
                 <a href='{% url "join-now" %}'>
-                <button class='bg-blue-700 rounded-sm border border-blue-200 p-0 w-72 my-2'>Get Started</button>
+                <button class='bg-blue-700 rounded-sm border border-blue-200 p-0 w-72 4 my-2'>Get Started</button>
                 </a>    
             </p>
         </div>
