file upload added.

--- a/my_bootcamp/templates/Tutor/TutorHome.html
+++ b/my_bootcamp/templates/Tutor/TutorHome.html
@@ -13,9 +13,9 @@
         </div>
     </div>
 
-    <div class='flex flex-col lg:flex-row items-center justify-center relative'>
+    <div class='flex flex-col  lg:flex-row items-center justify-center relative'>
         <!-- Image -->
-        <div class='flex-1'>
+        <div class='flex-1 h-screen'>
             <img class='w-full h-full' src='https://images.unsplash.com/photo-1484807352052-23338990c6c6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D' alt='billboard_pic_tutor1'>
         </div>
     
