--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -54,6 +54,7 @@
 		{% block sendmail %}{% endblock sendmail %}
 		{% block tutor_home %}{% endblock tutor_home %}
 		{% block tutor_join_form %}{% endblock tutor_join_form %}
+		{% block tutor_profile_page %}{% endblock tutor_profile_page %}
 		
 		{% include "./Footer/Footer.html" %}
 	
