--- a/my_bootcamp/templates/Footer/Footer.html
+++ b/my_bootcamp/templates/Footer/Footer.html
@@ -1,4 +1,4 @@
-<footer class='text-slate-300 bg-slate-900 text-center w-full items-center p-4'>
+<footer class='text-slate-300 bg-slate-900 text-center w-full items-center '>
     <span class='bg-clip-text text-xl lg:text-4xl text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>TutorsCloud</span><br/>
     
     <div class='flex flex-row sm:justify-left md:justify-left lg:justify-left xl:justify-center 2xl:justify-center gap-2  mt-4  overflow-x-scroll no-scrollbar'>
@@ -46,18 +46,18 @@
         </div><br/>
         </div>
     </div>
-    <div class='text-slate-400 px-4'>
+    <div class='text-slate-400 px-4 text-center'>
         <h3 class='font-semibold text-lg '>Connect With Us</h3>
         <p>Follow us on social media to stay updated on the latest trends, student achievements, and industry news. Join our community of students!
 
         </p>
     </div>
-    <div class='flex-1 mx-6 mb-6 mt-1 py-6'>
+    <div class='flex-1  mb-6 mt-1 py-6 text-center'>
         <div class='grid grid-cols-4'>
-            <div><i class="fa-brands fa-square-facebook text-blue-500 w-12 h-12"></i></div>
-            <div><i class="fa-brands fa-whatsapp text-green-500 w-12 h-12"></i></div>
-            <div><i class="fa-brands fa-youtube text-red-500 w-12 h-12"></i></div>
-            <div><i class="fa-brands fa-instagram text-rose-600 w-12 h-12"></i></div>
+            <div class=''><i class="fa-brands fa-square-facebook text-blue-500 w-12 h-12"></i></div>
+            <div class=''><i class="fa-brands fa-whatsapp text-green-500 w-12 h-12"></i></div>
+            <div class=''><i class="fa-brands fa-youtube text-red-500 w-12 h-12"></i></div>
+            <div class=''><i class="fa-brands fa-instagram text-rose-600 w-12 h-12"></i></div>
         </div>
     </div>
 </footer>
