--- a/my_bootcamp/templates/TutorProfilePage/TutorProfilePage.html
+++ b/my_bootcamp/templates/TutorProfilePage/TutorProfilePage.html
@@ -9,7 +9,7 @@
             <h3>Title: {{item.title}}</h3>
             <p>Price: {{item.price}}</p>
             <div class='flex xs:flex-col xm:flex-col sm:flex-col md:flex-col lg:flex-row xl:flex-row 2xl:flex-row  gap-2 items-center'>
-            <img src="/media/{{item.thumbnail}}" alt='name' class='w-[250px] h-[400px] flex-1 p-20'>
+            <img src="/media/{{item.thumbnail}}" alt='name' class='w-[250px] h-[400px] flex-1'>
             <video controls autoplay-off class='w-[20%] xs:w-[80%] h-[10%] flex-1'>
                 <source src="/media/{{item.video}}" type='video/mp4'>
             </video>
