--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -1,7 +1,7 @@
 
 <nav class='flex h-24 lg:h-20 justify-between bg-slate-900 items-center  shadow-xl shadow-slate-800 w-full'>
         
-    <a href=""  class='font-serif text-lg lg:text-4xl font-extrabold mx-2'>
+    <a href="{% url "home-page" %}"  class='font-serif text-lg lg:text-4xl font-extrabold mx-2'>
         <span class=" bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500  align-middle ">
         TutorsCloud
         </span>
