tutor profile page initial setup done.

--- a/my_bootcamp/templates/TutorProfilePage/TutorProfilePage.html
+++ b/my_bootcamp/templates/TutorProfilePage/TutorProfilePage.html
@@ -6,6 +6,7 @@
     {% for item in data %}
     <ul class='my-2 border-b border-b-blue-700 py-4'>
         <div class='text-justify overflow-x-scroll no-scrollbar '>
+            <h3>Instructor: {{user_name}}</h3>
             <h3>Title: {{item.title}}</h3>
             <p>Price: {{item.price}}</p>
             <div class='flex xs:flex-col xm:flex-col sm:flex-col md:flex-col lg:flex-row xl:flex-row 2xl:flex-row  gap-2 items-center'>
