updated. user name filtering added for user and home page.

--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -10,7 +10,7 @@
                 <source src="/media/{{item.video}}" type='video/mp4'>
             </video>
            
-            <h3>Posted By : {{item.instructor}}</h3>
+            <h3>Posted By : {{item.instructor.username}}</h3>
             <p>Published On : {{item.created_at}}</p>
             <p>Price: {{item.price}}</p>
             <p>Description:  {{item.description}}</p>
