--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -3,39 +3,75 @@
 <div clas='p-4'>
     
     {% for item in form  %}
-    <ul class='my-2 border-b border-b-blue-700 p-4 flex flex-row'>
-        <div class='text-justify overflow-x-scroll no-scrollbar '>
-            <h3>Title: {{item.title}}</h3>
-            <video controls autoplay-off class='w-[40%] xs:w-[90%] h-[80%] border border-purple-900 rounded-lg'>
-                <source src="/media/{{item.video}}" type='video/mp4'>
-            </video>
-           
-            <h3>Posted By : {{item.instructor.username}}</h3>
-            <p>Published On : {{item.created_at}}</p>
-            <p>Price: {{item.price}}</p>
-            <p>Description:  {{item.description}}</p>
-            <p>Likes: {{item.total_likes}}</p>
-            <br>
-          
-            {% if user.is_authenticated %}
-            {% if user in video.like_set.all %}
-                <form action="{% url 'like_video' item.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit"><i class="fa-regular fa-thumbs-down  text-orange-600 w-8 h-8 "></i></button>
+    
+        {% comment %} {% for like in likes %} {% endcomment %}
+            
+        
+            
+        
+                
+        <ul class='my-2 border-b border-b-blue-700 p-4 flex flex-row'>
+            <div class='text-justify overflow-x-scroll no-scrollbar '>
+                <h3>Title: {{item.title}}</h3>
+                <video controls autoplay-off class='w-[40%] xs:w-[90%] h-[80%] border border-purple-900 rounded-lg'>
+                    <source src="/media/{{item.video}}" type='video/mp4'>
+                </video>
+            
+                <h3>Posted By : {{item.instructor.username}}</h3>
+                <p>Published On : {{item.created_at}}</p>
+                <p>Price: {{item.price}}</p>
+                <p>Description:  {{item.description}}</p>
+                <p>Likes: {{item.total_likes}}</p>
+                <p>New Likes: {{item.like}}</p>
+                
+                {% for like in likes %}
+                
+                {% if user.id in like %}
+                {{like.user.id}}, {{like.video.id}}
+                    
+                {% endif %}
+                    
+                    
+                {% endfor %}
+                    
+                
+                
+                    
+                
+                
+                    
+                
+                {% if user.is_authenticated %}
+                <form> 
+                    {% csrf_token %}  
+                <button type='submit' class=''>Add To Cart:<i class="fa-solid fa-cart-plus w-8 h-8 font-serif 
+                    items-center p-2  text-blue-200 hover:text-blue-700"  ></i></button>
+                <br>
                 </form>
-            {% else %}
-                <form action="{% url 'like_video' item.id %}" method="post">
-                    {% csrf_token %}
-                    <button type="submit" class=''><i class="fa-regular fa-thumbs-up  text-orange-600 w-8 h-8"></i></button>
-                </form>
-            {% endif %}
-            {% else %}
-                <p>Please <a href="{% url 'login' %}">log in</a> to like this video.</p>
-            {% endif %}
+                {% endif %}
+                    
+            
+                {% if user.is_authenticated %}
+                {% if user.id in like.video.all %}
+                    <form action="{% url 'like_video' item.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit"><i class="fa-regular fa-thumbs-down  text-orange-600 w-8 h-8 "></i></button>
+                    </form>
+                {% else %}
+                    <form action="{% url 'like_video' item.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class=''><i class="fa-regular fa-thumbs-up  text-orange-600 w-8 h-8"></i>{{user.id}},{{item.user_like}}</button>
+                    </form>
+                {% endif %}
+                {% else %}
+                    <p>Please <a href="{% url 'login' %}">log in</a> to like this video.</p>
+                {% endif %}
 
-        </div>
-    </ul>    
+            </div>
+        </ul>  
+        {% comment %} {% endfor %}   {% endcomment %}
     {% endfor %}
+    
         
 </div>
 {% endblock home %}
