--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -30,7 +30,7 @@
             </a>
         </div> 
         <div  class=' mx-2 sm:flex  md:flex lg:flex xl:flex 2xl:flex'>
-            <a>
+            <a href="{% url "cart-page" %}">
             <i class="fa-solid fa-cart-plus w-8 h-8 font-serif 
             items-center p-2  text-blue-200 hover:text-blue-700"  ></i>
             </a>
