--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -55,6 +55,7 @@
 		{% block tutor_home %}{% endblock tutor_home %}
 		{% block tutor_join_form %}{% endblock tutor_join_form %}
 		{% block tutor_profile_page %}{% endblock tutor_profile_page %}
+		{% block cart_block %}{% endblock cart_block %}
 		
 		{% include "./Footer/Footer.html" %}
 	
