--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -2,14 +2,7 @@
 {% block home %}
 <div clas='p-4'>
     
-    {% for item in form  %}
-    
-        
-            
-        
-            
-        
-                
+    {% for item in form  %}       
         <ul class='my-2 border-b border-b-blue-700 p-4 flex flex-row'>
             <div class='text-justify overflow-x-scroll no-scrollbar '>
                 <h3>Title: {{item.title}}</h3>
@@ -23,21 +16,18 @@
                 <p>Description:  {{item.description}}</p>
                 <p>Likes: {{item.total_likes}}</p>
                 
-                    
-                
-                
                 {% if user.is_authenticated %}
                 {% if user.id in item.cart_users %}
                     <form action="{% url 'cart-item' item.id %}" method="post"> 
                         {% csrf_token %}  
-                    <button type='submit' class=''>Item carted:<i class="fa-solid fa-dolly w-8 h-8 font-serif 
-                        items-center p-2  text-slate-200 hover:text-orange-700"></i></button>
+                    <button type='submit' class=''>Item carted:<i class="fa-solid fa-cart-shopping w-8 h-8 font-serif 
+                        items-center p-2  text-orange-700"></i></button>
                     <br>
                     </form>
                 {% else %}
                     <form action="{% url 'cart-item' item.id %}" method="post"> 
                         {% csrf_token %}  
-                    <button type='submit' class=''>Add To Cart:<i class="fa-solid fa-dolly w-8 h-8 font-serif 
+                    <button type='submit' class=''>Add To Cart:<i class="fa-solid fa-cart-shopping w-8 h-8 font-serif 
                         items-center p-2  text-slate-200 hover:text-slate-200"></i></button>
                     <br>
                     </form>
