--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -13,13 +13,10 @@
             </a>
         </div> 
         <div  class=' mx-2 hidden xl:flex 2xl:flex items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
-           <form action='/' method='POST' class='flex '>
-            {% csrf_token %}
-            <input class='flex-1 rounded-l-lg w-96 text-slate-800' placeholder='Search Here' type='text'></input>
+           <form action="{% url "home-page" %}" method='get' class='flex '>
+            <input class='flex-1 rounded-l-lg w-96 text-slate-800' placeholder='Search Here' type='text' name='search'></input>
             <button
                 type="submit"
-                value="Submit"
-                name='save' 
                 class="bg-green-700 rounded-r-lg flex-initial text-slate-800 p-2 hover:bg-blue-700"
                 >Search</button>
            </form>
@@ -29,11 +26,33 @@
             Start Tutoring
             </a>
         </div> 
-        <div  class=' mx-2 sm:flex  md:flex lg:flex xl:flex 2xl:flex'>
-            <a href="{% url "cart-page" %}">
-            <i class="fa-solid fa-cart-plus w-8 h-8 font-serif 
-            items-center p-2  text-blue-200 hover:text-blue-700"  ></i>
-            </a>
+        <div  class=' mx-2 sm:flex  md:flex lg:flex xl:flex 2xl:flex py-['25%']'>
+            
+            {% if user.is_authenticated %}
+                
+            <div class='grid grid-flow-row row-span-1 h-full'>
+                <div class='col-span-1 h-1/3 text-center items-baseline text-green-500'>
+                    {{total_cart}}
+                </div>
+                <div class='col-span-1 h-2/3'>
+                <a href="{% url "cart-page" %}">
+                <i class="fa-solid fa-cart-plus w-6 h-6 font-serif 
+                items-center   text-blue-200 hover:text-blue-700"  ></i>
+                </a>
+                </div>
+            </div>
+            {% else %}
+            <div class='grid grid-flow-row row-span-1  py-3'>
+                <div class='col-span-1'>
+                <a href="{% url "cart-page" %}">
+                <i class="fa-solid fa-cart-plus w-8 h-8 p-2 font-serif 
+                items-center   text-blue-200 hover:text-blue-700"  ></i>
+                </a>
+                </div>
+            </div>
+            
+            {% endif %}
+                
         </div>  
         <div  class=' mx-2 sm:flex  md:flex lg:hidden xl:hidden 2xl:hidden'>
             <a>
@@ -44,7 +63,7 @@
          
         {% if user.is_authenticated %}
             
-            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex '>
+            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex py-3'>
                 <a href="{% url "logout-page" %}">
                 <button class=' font-serif rounded-md 
                 items-center   h-12 px-8
@@ -54,7 +73,7 @@
                 </a>
             </div>  
          {% else %} 
-            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex '>
+            <div  class='mx-2 hidden lg:flex xl:flex 2xl:flex py-3'>
                 <a href="{% url "login-page" %}">
                 <button class=' font-serif rounded-md 
                 items-center   h-12 px-8
@@ -65,7 +84,7 @@
             </div> 
         {% endif %}
             
-        <div  class='mx-2 hidden  lg:flex xl:flex 2xl:flex '>
+        <div  class='mx-2 hidden  lg:flex xl:flex 2xl:flex py-3'>
             <a href="{% url "signup-page" %}">
             <button class=' font-serif rounded-md
             items-center h-12  px-8 
