--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -6,6 +6,14 @@
         TutorsCloud
         </span>
     </a>
+    {% if user.is_authenticated %}
+        <div  class=' mx-2 flex  py-3'>
+            <a>
+            <button class=' text-ellipsis text text-lg  overflow-x-hidden'><span class='bg-clip-text text-transparent bg-gradient-to-r  from-blue-700 via-indigo-500 to-orange-500'>Hello {{user}}!</span></button>
+            </a>
+        </div>  
+            
+    {% endif %}
         <div class='flex text-teal-900 align-middle py-0.5 px-4 '>
         <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex  hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
             <a>
@@ -26,7 +34,7 @@
             Start Tutoring
             </a>
         </div> 
-        <div  class=' mx-2 sm:flex  md:flex lg:flex xl:flex 2xl:flex py-['25%']'>
+        <div  class=' mx-2 sm:flex  md:flex lg:flex xl:flex 2xl:flex py-2'>
             
             {% if user.is_authenticated %}
                 
@@ -53,8 +61,8 @@
             
             {% endif %}
                 
-        </div>  
-        <div  class=' mx-2 sm:flex  md:flex lg:hidden xl:hidden 2xl:hidden'>
+        </div> 
+        <div  class=' mx-2 sm:flex  md:flex lg:hidden xl:hidden 2xl:hidden py-3'>
             <a>
             <i class="fa-solid fa-bars w-8 h-8 font-serif 
             items-center p-2  text-blue-200 hover:text-blue-700"  ></i>
@@ -83,6 +91,7 @@
                 </a>
             </div> 
         {% endif %}
+      
             
         <div  class='mx-2 hidden  lg:flex xl:flex 2xl:flex py-3'>
             <a href="{% url "signup-page" %}">
@@ -96,5 +105,20 @@
         
  
     </div>
-
+    
 </nav>
+<div class='flex '>
+    <ul class='p-4 border-b border-violet-500 rounded-b-xl xs:w-screen xm:w-screen sm:w-screen md:w-screen lg:mx-96'>
+        
+        {% for items in category %}
+        <li class='border-b border-violet-500'>
+            <form action="{% url "home-page" %}" method='get' class='flex '>
+            <button type='submit' name='category' value="{{items.name}}">
+            {{items.name}}
+            <button>
+            </form>
+        </li>
+        {% endfor %}
+            
+    </ul>
+</div>
