--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -1,7 +1,7 @@
 
 <nav class='flex h-24 lg:h-20 justify-between bg-slate-900 items-center  shadow-xl shadow-slate-800 w-full'>
         
-    <a href="{% url "home-page" %}"  class='font-serif text-lg lg:text-4xl font-extrabold mx-2'>
+    <a href="{% url "home-page" %}"  class='font-serif text-lg lg:text-4xl font-extrabold mx-2' >
         <span class=" bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500  align-middle ">
         TutorsCloud
         </span>
@@ -15,7 +15,7 @@
             
     {% endif %}
         <div class='flex text-teal-900 align-middle py-0.5 px-4 '>
-        <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex  hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
+        <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex  hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500' id='nav_category_link'>
             <a>
             Categories
             </a>
@@ -107,11 +107,13 @@
     </div>
     
 </nav>
-<div class='flex '>
-    <ul class='p-4 border-b border-violet-500 rounded-b-xl xs:w-screen xm:w-screen sm:w-screen md:w-screen lg:mx-96'>
+<div class='flex' >
+    <ul id='category_div' class='hidden p-4 border-b border-violet-500 rounded-b-xl xs:w-screen xm:w-screen sm:w-screen md:w-screen lg:mx-96'>
         
+        <li class='text-right p-2' id='nav_category_link_hide'><i class="fa-solid fa-xmark w-8 h-8 font-serif 
+            items-center p-2  text-blue-200 hover:text-blue-700"></i></li>
         {% for items in category %}
-        <li class='border-b border-violet-500'>
+        <li class='border-b border-violet-500' id='nav_category_item_hide'>
             <form action="{% url "home-page" %}" method='get' class='flex '>
             <button type='submit' name='category' value="{{items.name}}">
             {{items.name}}
